--- a/GuruxAMI.Client_2010.csproj
+++ b/GuruxAMI.Client_2010.csproj
@@ -36,6 +36,9 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DefineConstants>TRACE;DEBUG</DefineConstants>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>GuruxAMI.Client.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Quartz, Version=2.2.3.400, Culture=neutral, PublicKeyToken=f6b8c98a402cc8a4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -60,17 +63,36 @@
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GuruxAMI.Client\GXAmiClientLoginInfo.cs" />
     <Compile Include="GuruxAMI.Client\GXAmiSchedulerServer.cs" />
     <Compile Include="GuruxAMI.Client\GXAmiDataCollectorServer.cs" />
     <Compile Include="GuruxAMI.Client\GXAmiEventListener.cs" />
     <Compile Include="GuruxAMI.Client\GXProxyClass.cs" />
     <Compile Include="GuruxAMI.Client\GXAmiClient.cs" />
+    <Compile Include="GuruxAMI.Client\GXAmiLoginForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GuruxAMI.Client\GXAmiLoginForm.Designer.cs">
+      <DependentUpon>GXAmiLoginForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GuruxAMI.Client\HostForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GuruxAMI.Client\HostForm.Designer.cs">
+      <DependentUpon>HostForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\GXCom\Gurux.Common\Development\Gurux.Common_2010.csproj">
@@ -89,6 +111,21 @@
       <Project>{613F7B0E-2FCD-4DC6-9A64-E4D9E4BE56C4}</Project>
       <Name>GuruxAMI.Common_2010</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="GuruxAMI.Client\GXAmiLoginForm.resx">
+      <DependentUpon>GXAmiLoginForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GuruxAMI.Client\HostForm.resx">
+      <DependentUpon>HostForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="GuruxAMI.Client.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
